portifolio of the first pull request

--- a/index.html
+++ b/index.html
@@ -1,13 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="description" content="Habitamu Asimare | A software developer as full-stack" />
+  <meta name="keywords" content="HABASM, Habitamu Asimare, full-stack developer, app developer" />
+  <meta name="author" content="Habitamu Asimare" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="stylesheet" href="style.css" />
+  <title>HABASM Portofilio</title>
 </head>
 <body>
-    <h1>Hello Microverse</h1>
+  <div class="content">
+    <header class="header background-white">
+      <nav class="nbar flex">
+        <a href="#" class="link fontSizeValue-20 fontWeightValue-700 lineHeightValue-20">HABASM</a>
+        <div class="navbarMenu">
+          <ul class="navbarMenuUl ul flex">
+            <li class="navbarMenuLi">
+              <a href="#" class="navbarMenuLink link fontWeightValue-500 fontSizeValue-15 lineHeightValue-20 color-n-600">Portfolio</a>
+            </li>
+            <li class="navbarMenuLi">
+              <a href="#" class="navbarMenuLink link fontWeightValue-500 fontSizeValue-15 lineHeightValue-20 color-n-600">About</a>
+            </li>
+            <li class="navbarMenuLi">
+              <a href="#" class="navbarMenuLink link fontWeightValue-500 fontSizeValue-15 lineHeightValue-20 color-n-600">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <img class="nbarHamb" src="images/hamburguer.png" alt="hamburguer icon" />
+      </nav>
+    </header>
+
+    <section class="head flex">
+      <h1 class="htitle fontSizeValue-40 fontWeightValue-700 lineHeightValue-52">
+        I'm HAB <span>Glad to see you!</span>
+      </h1>
+      <p class="head__dsc fontSizeValue-16 fontWeightValue-400 lineHeightValue-24">
+        I’m a software developer! I can help you build a product , feature or
+        website Look through some of my work and experience! If you like what
+        you see and have a project you need coded, don’t hestiate to contact
+        me.
+      </p>
+      <a href="#works" class="head__link link fontSizeValue-16 fontWeightValue-500 lineHeightValue-24 color-p-400">My Projects</a>
+      <ul class="icons ul flex">
+        <li class="iconsList">
+          <a href="https://twitter.com/AsimareHabitamu" class="links link"><img src="images/twitter.png" alt="twitter icon" /></a>
+        </li>
+        <li class="iconsList">
+          <a href="https://www.linkedin.com/in/habitamu-asimare-aa824b169/" class="links link"><img src="images/Linkedin.svg" alt="linkedin icon" /></a>
+        </li>
+        <li class="iconsList">
+          <a href="#" class="links link"><img src="images/M.png" alt="M icon" /></a>
+        </li>
+        <li class="iconsList">
+          <a href="https://github.com/habasm" class="links link"><img src="images/github.svg" alt="github icon" /></a>
+        </li>
+        <li class="iconsList">
+          <a href="#" class="links link"><img src="images/hand.svg" alt="hand icon" /></a>
+        </li>
+      </ul>
+    </section>    
+  </div>
 </body>
 </html>
