--- a/index.html
+++ b/index.html
@@ -78,16 +78,11 @@
               or sign-ups required.
             </p>
             <div class="card__topics flex">
-              <p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">
-                html
-              </p>
-              <p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50
-                  ">
-                css
-              </p>
-              <p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">
-                javascript
-              </p>
+              <ul class="langs">
+                <li><p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">html</p></li>
+                <li><p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">css</p></li>
+                <li><p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">javascript</p></li>
+              </ul> 
             </div>
             <div class="card__btn">
               <button type="button" class="btn weight-500 size-17 line_hieght-24 clr-p-500 background-white first-btn" id="0">
@@ -120,16 +115,11 @@
               or sign-ups required.
             </p>
             <div class="card__topics flex">
-              <p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">
-                html
-              </p>
-              <p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50
-                  ">
-                css
-              </p>
-              <p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">
-                javascript
-              </p>
+              <ul class="langs">
+                <li><p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">html</p></li>
+                <li><p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">css</p></li>
+                <li><p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">javascript</p></li>
+              </ul> 
             </div>
             <div class="card__btn">
               <button type="button" class="btn weight-500 size-17 line_hieght-24 clr-p-500 background-white first-btn" id="0">
@@ -162,16 +152,11 @@
               or sign-ups required.
             </p>
             <div class="card__topics flex">
-              <p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">
-                html
-              </p>
-              <p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50
-                  ">
-                css
-              </p>
-              <p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">
-                javascript
-              </p>
+              <ul class="langs">
+                <li><p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">html</p></li>
+                <li><p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">css</p></li>
+                <li><p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">javascript</p></li>
+              </ul> 
             </div>
             <div class="card__btn">
               <button type="button" class="btn weight-500 size-17 line_hieght-24 clr-p-500 background-white first-btn" id="0">
@@ -204,16 +189,11 @@
               or sign-ups required.
             </p>
             <div class="card__topics flex">
-              <p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">
-                html
-              </p>
-              <p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50
-                  ">
-                css
-              </p>
-              <p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">
-                javascript
-              </p>
+              <ul class="langs">
+                <li><p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">html</p></li>
+                <li><p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">css</p></li>
+                <li><p class="card__topics__text weight-500 size-12 line_hieght-16 clr-p-400 bg-p-50">javascript</p></li>
+              </ul>
             </div>
             <div class="card__btn">
               <button type="button" class="btn weight-500 size-17 line_hieght-24 clr-p-500 background-white first-btn" id="0">
